@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright (c) 1997-2013 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997-2016 Oracle and/or its affiliates. All rights reserved.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
@@ -82,7 +82,9 @@ public class MboxFolder extends Folder {
      * is null; otherwise the MboxMessage object contains the metadata.
      */
     static final class MessageMetadata {
+	public long start;	// offset in temp file of start of this message
 	public long end;	// offset in temp file of end of this message
+	public long dataend;	// offset of end of message data, <= "end"
 	public MboxMessage message;	// the message itself
 	public boolean recent;	// message is recent?
 	public boolean deleted;	// message is marked deleted?
@@ -522,7 +524,6 @@ public class MboxFolder extends Folder {
 		folder.touchlock();
 		wr++;
 	    }
-	    file_size = saved_file_size = folder.length();
 	    // If no messages in the mailbox, and we're closing,
 	    // maybe we should remove the mailbox.
 	    if (wr == 0 && closing) {
@@ -542,6 +543,7 @@ e.printStackTrace();
 	    // close the folder, flushing out the data
 	    try {
 		os.close();
+		file_size = saved_file_size = folder.length();
 		if (!keep) {
 		    folder.delete();
 		    file_size = 0;
@@ -611,12 +613,11 @@ e.printStackTrace();
 		NewlineOutputStream nos = new NewlineOutputStream(cos);
 		msg.writeTo(nos);
 		nos.flush();
-		os = new NewlineOutputStream(os);
+		os = new NewlineOutputStream(os, true);
 		os = new ContentLengthUpdater(os, cos.getSize());
 		PrintStream pos = new PrintStream(os, false, "iso-8859-1");
 		pos.println(getUnixFrom(msg));
 		msg.writeTo(pos);
-		pos.println();	// make sure there's a blank line at the end
 		pos.flush();
 	    }
 	} catch (MessagingException me) {
@@ -712,13 +713,8 @@ e.printStackTrace();
 
     private InputStream getMessageStream(int msgno) {
 	int index = messageIndexOf(msgno);
-	long start;
-	if (index == 0)
-	    start = 0;
-	else
-	    start = ((MessageMetadata)messages.get(index - 1)).end;
-	long end = ((MessageMetadata)messages.get(index)).end;
-	return temp.newStream(start, end);
+	MessageMetadata md = (MessageMetadata)messages.get(index);
+	return temp.newStream(md.start, md.dataend);
     }
 
     public synchronized void appendMessages(Message[] msgs)
